cmake_minimum_required(VERSION 3.16)

add_subdirectory(FixtureManager)
add_subdirectory(JogView)
add_subdirectory(LCToolTable)
add_subdirectory(MDIEditor)
add_subdirectory(PathEditor)
add_subdirectory(PrefsEditor)
add_subdirectory(Preview3D)
add_subdirectory(SysEventView)
add_subdirectory(ToolManager)
